--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,23 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  	<!-- Import favicons -->
+  	<link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
+	<link rel="manifest" href="static/favicon/manifest.json">
+	<link rel="mask-icon" href="static/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="shortcut icon" href="static/favicon/favicon.ico">
+	<meta name="msapplication-config" content="static/favicon/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
+
     <title>Aux</title>
 
   	<!-- Import CSS frameworkS -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css">
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.slim.js"></script>
   </head>
